[gd_scene load_steps=5 format=3 uid="uid://br15uhoqjd81u"]

[ext_resource type="Script" uid="uid://dlwrdk0oiq66e" path="res://scenes/canon/enemy_canon.gd" id="1_03qqw"]
[ext_resource type="PackedScene" uid="uid://bsne8nep08s1t" path="res://assets/models/guns/mega_gun (2).glb" id="2_5qnt3"]
[ext_resource type="PackedScene" uid="uid://bmu64a6t41j6h" path="res://scenes/canon/enemy_projectyle.tscn" id="2_b3kg5"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_spyrg"]
height = 10.0
radius = 15.0

[node name="EnemyCanon" type="Node3D"]
script = ExtResource("1_03qqw")
projectile_scene = ExtResource("2_b3kg5")

[node name="mega_gun (2)" parent="." instance=ExtResource("2_5qnt3")]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_spyrg")

[connection signal="shooted" from="." to="." method="_on_shooted"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
